# scrapy

./: AMZN.csv  Cargo.toml  LICENSE  README.md  generate_data.py
src/: collectors.rs  fetcher.rs  main.rs  market.rs
